Blunodemo1 project BlunoBasicRemote with arrows

--- a/Android/BlunoBasicDemo/app/src/main/res/values/strings.xml
+++ b/Android/BlunoBasicDemo/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
 
-    <string name="app_name">BlunoBasicDemo</string>
+    <string name="app_name">BlunoBasicRemote</string>
     <string name="ble_not_supported">BLE is not supported</string>
     <string name="label_data">Data:</string>
     <string name="label_device_address">Device address:</string>
@@ -20,4 +20,7 @@
     <string name="menu_scan">Scan</string>
     <string name="menu_stop">Stop</string>
     <string name="action_settings">Action settings</string>
+    <string name="up">UP</string>
+    <string name="dn">DN</string>
+    <string name="lh">LH</string>
 </resources>
